# sage-studio

./: .gitignore  AGENT_TASKS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_LATEST.md  CI_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  FINETUNE_IMPLEMENTATION_SUMMARY.md  FINETUNE_IMPORT_FIX.md  FINETUNE_SETUP_STATUS.md  FIX_SUMMARY.md  MANIFEST.in  QUICK_CPU_GUIDE.sh  README.md  RESTART_FIX_SUMMARY.md  STUDIO_LLM_INTEGRATION.md  commit_ci_integration.sh  commit_fix.sh  diagnose_chat.py  fix_engine_registration.sh  pyproject.toml  quickstart.sh  requirements-ci.txt  sage-studio.code-workspace  setup.cfg  setup.py  setup_finetune.py  start-studio.sh  start_cpu_model.sh  test_fix.sh  test_llm_autostart.py  test_restart_fix.sh  verify_ci_setup.sh  verify_engine_fix.sh  verify_finetune_fix.py  verify_finetune_integration.py
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: sage-studio.agent.md
.github/workflows/: README.md  cd-deploy-studio.yml  ci-test.yml  live-multiturn-chat.yml
config/: models.json
docs/: CPU_INFERENCE_GUIDE.md  CPU_SUPPORT_UPDATE.md  ENGINE_FIX_SUMMARY.md  FIX_SUMMARY_2026_02_07.md  LLM_LONG_TERM_REFACTOR_PLAN.md  MODEL_SWITCHING_FIX.md  MODEL_SWITCHING_ISSUE_DIAGNOSIS.md  TEST_CHAT_UI.md  boundary_phase1.md  project-structure.md  testing-chat-ui.md
hooks/: pre-push
scripts/: README.md  test_playground.sh  verify_chat_ui.py
src/sage/: __init__.py
src/sage/studio/: __init__.py  _version.py  chat_manager.py  cli.py  studio_manager.py
src/sage/studio/api/: __init__.py  app.py  auth.py  canvas.py  chat.py  chat_sse.py  endpoints.py  llm.py  sessions.py  vida_admin.py  vida_memory.py  vida_ws.py
src/sage/studio/application/: __init__.py  chat_manager.py  endpoint_management.py  studio_manager.py
src/sage/studio/config/: __init__.py  knowledge_sources.yaml  ports.py  vida.py  vida.yaml
src/sage/studio/config/backend/: api.py
src/sage/studio/config/backend/config/: models.json
src/sage/studio/contracts/: __init__.py  models.py
src/sage/studio/data/operators/: AgentRuntimeOperator.json  BGEReranker.json  FileSource.json  HFGenerator.json  OpenAIGenerator.json  QAPromptor.json  SimpleRetriever.json  TerminalSink.json
src/sage/studio/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
src/sage/studio/frontend/src/: App.tsx  index.css  vite-env.d.ts
src/sage/studio/frontend/src/components/: ChatMode.tsx  FinetunePanel.tsx  FlowEditor.tsx  LogViewer.tsx  LoginPage.tsx  MemorySettings.tsx  MessageContent.tsx  MobileHeader.tsx  MobileSidebar.tsx  NodePalette.tsx  Playground.tsx  PropertiesPanel.tsx  ReasoningAccordion.tsx  Settings.tsx  StatusBar.tsx  Toolbar.tsx  VidaAgentPanel.tsx  VidaStatusCard.tsx
src/sage/studio/frontend/src/components/__tests__/: MobileHeader.test.tsx  VidaAgentPanel.test.tsx  VidaStatusCard.test.tsx
src/sage/studio/frontend/src/components/nodes/: CustomNode.tsx
src/sage/studio/frontend/src/services/: api.ts
src/sage/studio/frontend/src/store/: authStore.ts  chatDomain.ts  chatStore.ts  playgroundStore.ts
src/sage/studio/models/: __init__.py  agent_step.py
src/sage/studio/runtime/: __init__.py  connection_manager.py  session_memory.py  vida_runtime.py
src/sage/studio/runtime/adapters/: __init__.py  inference.py
src/sage/studio/runtime/chat/: __init__.py  actors.py  assembly.py  contracts.py  pipeline.py  service.py
src/sage/studio/runtime/endpoints/: __init__.py  bootstrap.py  contracts.py  model_discovery.py  registry.py  router.py  secrets.py
src/sage/studio/services/: __init__.py  agent_orchestrator.py  auth_service.py  chat_pipeline.py  chat_pipeline_recommender.py  document_loader.py  file_upload_service.py  finetune_manager.py  intent_classifier.py  knowledge_manager.py  memory_integration.py  node_manifest.py  node_registry.py  pipeline_builder.py  playground_executor.py  stream_handler.py  vector_store.py  workflow_generator.py
src/sage/studio/services/agents/: __init__.py  base.py  coding.py  researcher.py
src/sage/studio/supervisor/: __init__.py  errors.py  health_monitor.py  port_resolver.py  process_supervisor.py  startup_reporter.py
src/sage/studio/tools/: api_docs.py  arxiv_search.py  code_writing.py  middleware_adapter.py
src/sage/studio/utils/: nodejs_check.py  port_check.py
tests/: __init__.py  test_agent_step.py  test_boundary_dependency_audit.py  test_issue41_42_boundary_dependency_audit.py  test_issue43_runtime_compat_cleanup.py  test_model_switching.py  test_models.py  test_node_registry.py  test_playground.sh  test_runtime_cleanup_guardrails.py  test_studio_cli.py
tests/config/: __init__.py  test_backend_api.py
tests/integration/: __init__.py  test_chat_routes.py  test_e2e_integration.py  test_issue44_studio_lifecycle.py  test_live_multiturn_chat.py  test_model_switching.py  test_session_memory_routes.py  test_studio_cli.py  test_studio_lifecycle.py  test_studio_llm_integration.py  test_vida_admin_routes.py  test_vida_memory_routes.py  test_vida_ws_restore.py
tests/services/: test_agent_orchestrator.py  test_auth_service.py  test_docs_processor.py  test_finetune_manager.py  test_intent_classifier.py  test_knowledge_manager.py  test_researcher_agent.py  test_vector_store.py
tests/tools/: test_api_docs.py  test_base.py  test_knowledge_search.py
tests/unit/: __init__.py  test_node_registry.py  test_pipeline_builder.py
tests/unit/config/: test_api_uploads.py  test_backend_api.py
tests/unit/services/: __init__.py  conftest.py  test_agent_orchestrator.py  test_chat_pipeline.py  test_chat_sse.py  test_endpoint_bootstrap_local_llm.py  test_file_upload_service.py  test_finetune_manager.py  test_health_monitor.py  test_inference_adapter.py  test_knowledge_manager.py  test_llm_model_selection.py  test_port_resolver.py  test_process_supervisor.py  test_researcher_agent.py  test_session_memory.py  test_startup_reporter.py  test_stream_handler.py  test_vector_store.py  test_workflow_generator.py
tests/unit/tools/: test_arxiv_search.py
tests/utils/: __init__.py  test_gpu_check.py
(+16 files in other folders)
