[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-studio"
dynamic = ["version"]
description = "SAGE Studio - Visual workflow builder and LLM playground for SAGE AI pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }]
keywords = [
    "sage",
    "studio",
    "low-code",
    "web-ui",
    "pipeline",
    "development",
    "workflow",
    "llm",
    "ai",
    "intellistream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]

# Core dependencies
dependencies = [
    # SAGE meta package (includes all core packages)
    "isage>=0.2.0",

    # sageLLM - IntelliStream自研推理引擎（包含Gateway、Control Plane、Backend等完整推理能力）
    "isagellm>=0.1.0",

    # Agentic dependencies (independent packages)
    "isage-agentic>=0.1.0",
    "isage-sias>=0.1.0",
    "isage-libs-intent>=0.1.0", # Intent recognition (L3)

    # Memory management (independent package)
    "isage-neuromem>=0.2.0", # Memory collection & vector storage (L4)

    # Fine-tune dependencies (independent package)
    "isage-finetune>=0.1.0",

    # Backend API dependencies
    "pydantic[email]>=2.10.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "starlette>=0.40,<0.51",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "h11>=0.16.0,<1.0.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "structlog>=23.0.0",
    "pydantic-settings>=2.0.0",
    "configparser>=5.3.0",
    "httpx>=0.28.0,<1.0.0",

    # Auth
    "passlib[argon2]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",

    # Utilities
    "jinja2>=3.1.0,<4.0.0",
    "markdown>=3.4.4,<4.0.0",
    "markupsafe>=2.0.1",
    "packaging>=24.0,<26.0",  # 兼容 streamlit 1.48.0 等老版本
]

license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "ruff==0.14.6"]

# Full middleware integration (optional)
middleware = ["isage-middleware>=0.2.0"]

all = ["isage-studio[middleware]"]

[project.urls]
Homepage = "https://github.com/intellistream/sage-studio"
Documentation = "https://intellistream.github.io/SAGE-Pub/"
Repository = "https://github.com/intellistream/sage-studio.git"
"Bug Tracker" = "https://github.com/intellistream/sage-studio/issues"
"Parent Project" = "https://github.com/intellistream/SAGE"

[project.scripts]
# Studio CLI is registered as a sage CLI plugin via entry point
# sage-cli will dynamically discover and load studio commands

[project.entry-points."sage.cli.plugins"]
# Register studio CLI to sage command
studio = "sage.studio.cli:register_studio_command"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"sage.studio" = [
    "py.typed",
    "*.pyi",
    "templates/*.html",
    "templates/**/*.html",
    "static/*",
    "static/**/*",
    "config/**/*.yaml",
    "config/**/*.json",
    "config/**/*.toml",
    "data/**/*",
    "docs/**/*.md",
    "frontend/dist/**/*",
]

[tool.setuptools.dynamic]
version = { attr = "sage.studio._version.__version__" }

# Development tools configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests as network tests",
    "system: marks tests as system tests",
    "core: marks tests as core functionality tests",
    "smoke: marks tests as smoke tests (quick validation)",
    "frontend: marks tests as frontend tests",
]

[tool.coverage.run]
source = ["src/sage"]
omit = ["*/tests/*", "*/test_*.py", "*/_test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:.*pkg_resources is deprecated.*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
